# XMLProblemScorerQt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.1fa340d  ProblemScorer_zh_CN.ts  ProblemTest.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  problemstructure.h  problemxmlparser.cpp  problemxmlparser.h
